clusters/homelab/apps/opengist/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opengist
  namespace: opengist
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: opengist
  template:
    metadata:
      labels:
        app: opengist
    spec:
      containers:
        - name: opengist
          image: ghcr.io/thomiceli/opengist:1.15.0 # {"$imagepolicy": "flux-system:opengist"}
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 256Mi
          readinessProbe:
            tcpSocket:
              port: 6157
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 6157
            initialDelaySeconds: 120
            periodSeconds: 30
            failureThreshold: 6
          ports:
            - name: http
              containerPort: 6157
          volumeMounts:
            - name: data
              mountPath: /opengist
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: opengist-data
