clusters/homelab/apps/opengist/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opengist
  namespace: opengist
  labels:
    traefik.tafu.casa/instance: public
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    traefik.ingress.kubernetes.io/router.middlewares: traefik-fail2ban-public@kubernetescrd
spec:
  ingressClassName: traefik-public
  rules:
    - host: paste.tafu.casa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opengist
                port:
                  number: 80
  tls:
    - hosts:
        - paste.tafu.casa
      secretName: opengist-tls
